syntax = "proto3";

package chat;

option go_package = "chat";

service ChatRoom {
    rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
    string message = 1;
    string user_name = 2;
}